--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "react": "^16.8.2",
+    "react-contenteditable": "^3.2.6",
     "react-dom": "^16.8.2",
     "react-redux": "^6.0.1",
     "react-router": "^5.0.0",
