--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google-cloud/storage": "^2.4.3",
     "axios": "^0.18.0",
     "react": "^16.8.2",
     "react-contenteditable": "^3.2.6",
