--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@google-cloud/storage": "^2.4.3",
     "axios": "^0.18.0",
+    "firebase": "^5.9.1",
     "react": "^16.8.2",
     "react-contenteditable": "^3.2.6",
     "react-dom": "^16.8.2",
