--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.5",
+    "react-transition-group": "^4.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "thunk": "0.0.1"
