--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
-/node_modules
-
-/build
-/dist
-
-public/assets
-
-test.js
+node_modules
+dist
+nodemon.json
+mongodb.password
+access.log
+src/server/images
+src/client/_good_ol_react
