--- a/package.json
+++ b/package.json
@@ -1,36 +1,50 @@
 {
-  "name": "notnik",
-  "version": "0.1.0",
-  "private": true,
-  "engines": {
-    "npm": "6.9.0",
-    "node": "11.14.0"
-  },
-  "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "^3.4.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "scripts": {
+        "dev": "concurrently \"npm run server\" \"npm run client\"",
+        "client": "cross-env NODE_ENV=development webpack serve --config config/webpack.dev.js",
+        "server": "nodemon src/server/app.js",
+        "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
+        "prod": "node -r ts-node/register/transpile-only src/server/index.ts",
+        "start": "npm run client"
+    },
+    "private": true,
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "body-parser": "^1.19.0",
+        "express": "^4.17.1",
+        "express-validator": "^6.12.0",
+        "helmet": "^4.6.0",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^5.13.0",
+        "morgan": "^1.10.0",
+        "multer": "^1.4.2",
+        "uuid": "^8.3.2",
+        "vue": "^2.6.14",
+        "vue-router": "^3.5.2"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.14.3",
+        "@babel/preset-env": "^7.14.4",
+        "autoprefixer": "^10.2.6",
+        "babel-loader": "^8.2.2",
+        "clean-webpack-plugin": "^4.0.0-alpha.0",
+        "concurrently": "^6.2.0",
+        "copy-webpack-plugin": "^9.0.1",
+        "cross-env": "^7.0.3",
+        "css-loader": "^5.2.6",
+        "html-loader": "^2.1.2",
+        "html-webpack-plugin": "^5.3.1",
+        "mini-css-extract-plugin": "^1.6.0",
+        "nodemon": "^2.0.7",
+        "postcss": "^8.3.0",
+        "postcss-loader": "^5.3.0",
+        "postcss-preset-env": "^6.7.0",
+        "sass": "^1.34.1",
+        "sass-loader": "^12.0.0",
+        "vue-loader": "^15.9.7",
+        "vue-template-compiler": "^2.6.14",
+        "webpack": "^5.38.1",
+        "webpack-cli": "^4.7.2",
+        "webpack-dev-server": "^3.11.2"
+    }
 }
