--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,8 @@
     "compilerOptions": {
         "baseUrl": "./",
         "paths": {
-            "@/*": ["src/client/*"]
+            "@/*": ["src/client/*"],
+            "@assets/": ["src/client/assets/*"]
         }
     }
 }
