--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     },
     "private": true,
     "dependencies": {
+        "axios": "^0.21.1",
+        "babel-plugin-transform-regenerator": "^6.26.0",
+        "babel-polyfill": "^6.26.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
         "express": "^4.17.1",
         "express-validator": "^6.12.0",
         "helmet": "^4.6.0",
@@ -18,9 +22,12 @@
         "mongoose": "^5.13.0",
         "morgan": "^1.10.0",
         "multer": "^1.4.2",
+        "process": "^0.11.10",
         "uuid": "^8.3.2",
         "vue": "^2.6.14",
-        "vue-router": "^3.5.2"
+        "vue-router": "^3.5.2",
+        "vue-style-loader": "^4.1.3",
+        "vuex": "^3.6.2"
     },
     "devDependencies": {
         "@babel/core": "^7.14.3",
@@ -32,6 +39,7 @@
         "copy-webpack-plugin": "^9.0.1",
         "cross-env": "^7.0.3",
         "css-loader": "^5.2.6",
+        "dotenv": "^10.0.0",
         "html-loader": "^2.1.2",
         "html-webpack-plugin": "^5.3.1",
         "mini-css-extract-plugin": "^1.6.0",
