--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "scripts": {
         "dev": "concurrently \"npm run server\" \"npm run client\"",
         "client": "cross-env NODE_ENV=development webpack serve --config config/webpack.dev.js",
-        "server": "nodemon src/server/app.js",
+        "server": "nodemon src/server/index.js",
         "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
         "prod": "node -r ts-node/register/transpile-only src/server/index.ts",
         "start": "npm run client"
@@ -13,7 +13,8 @@
         "babel-plugin-transform-regenerator": "^6.26.0",
         "babel-polyfill": "^6.26.0",
         "bcryptjs": "^2.4.3",
-        "body-parser": "^1.19.0",
+        "compression": "^1.7.4",
+        "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "express-validator": "^6.12.0",
