--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "scripts": {
         "dev": "concurrently \"npm run server\" \"npm run client\"",
         "client": "cross-env NODE_ENV=development webpack serve --config config/webpack.dev.js",
-        "server": "nodemon src/server/index.js",
+        "server": "nodemon --config config/nodemon.config.json",
         "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
         "prod": "node -r ts-node/register/transpile-only src/server/index.ts",
         "start": "npm run client"
@@ -33,6 +33,18 @@
     "devDependencies": {
         "@babel/core": "^7.14.3",
         "@babel/preset-env": "^7.14.4",
+        "@types/axios": "^0.14.0",
+        "@types/bcryptjs": "^2.4.2",
+        "@types/compression": "^1.7.0",
+        "@types/cookie-parser": "^1.4.2",
+        "@types/cors": "^2.8.10",
+        "@types/express": "^4.17.12",
+        "@types/helmet": "^4.0.0",
+        "@types/jsonwebtoken": "^8.5.2",
+        "@types/morgan": "^1.9.2",
+        "@types/multer": "^1.4.6",
+        "@types/node": "^15.12.5",
+        "@types/uuid": "^8.3.0",
         "autoprefixer": "^10.2.6",
         "babel-loader": "^8.2.2",
         "clean-webpack-plugin": "^4.0.0-alpha.0",
@@ -50,6 +62,9 @@
         "postcss-preset-env": "^6.7.0",
         "sass": "^1.34.1",
         "sass-loader": "^12.0.0",
+        "ts-loader": "^9.2.3",
+        "ts-node": "^10.0.0",
+        "typescript": "^4.3.4",
         "vue-loader": "^15.9.7",
         "vue-template-compiler": "^2.6.14",
         "webpack": "^5.38.1",
