--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "express-validator": "^6.12.0",
         "helmet": "^4.6.0",
         "jsonwebtoken": "^8.5.1",
+        "moment": "^2.29.1",
         "mongoose": "^5.13.0",
         "morgan": "^1.10.0",
         "multer": "^1.4.2",
