--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "process": "^0.11.10",
         "uuid": "^8.3.2",
         "vue": "^2.6.14",
+        "vue-codemirror": "^4.0.6",
+        "vue-markdown": "^2.2.4",
         "vue-router": "^3.5.2",
         "vue-style-loader": "^4.1.3",
         "vuex": "^3.6.2"
