--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "babel-plugin-transform-regenerator": "^6.26.0",
         "babel-polyfill": "^6.26.0",
         "bcryptjs": "^2.4.3",
+        "codemirror": "^5.62.0",
         "compression": "^1.7.4",
         "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
@@ -27,7 +28,6 @@
         "process": "^0.11.10",
         "uuid": "^8.3.2",
         "vue": "^2.6.14",
-        "vue-codemirror": "^4.0.6",
         "vue-markdown": "^2.2.4",
         "vue-router": "^3.5.2",
         "vue-style-loader": "^4.1.3",
