--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "copy-webpack-plugin": "^9.0.1",
         "cross-env": "^7.0.3",
         "css-loader": "^5.2.6",
+        "css-minimizer-webpack-plugin": "^3.0.2",
         "dotenv": "^10.0.0",
         "html-loader": "^2.1.2",
         "html-webpack-plugin": "^5.3.1",
