--- a/public/manifest.json
+++ b/public/manifest.json
@@ -35,7 +35,8 @@
         {
             "src": "./icons/icon-192x192.png",
             "type": "image/png",
-            "sizes": "192x192"
+            "sizes": "192x192",
+            "purpose": "any maskable"
         },
         {
             "src": "./icons/icon-384x384.png",
