--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "express-validator": "^6.12.0",
         "helmet": "^4.6.0",
         "jsonwebtoken": "^8.5.1",
+        "lodash": "^4.17.21",
         "moment": "^2.29.1",
         "mongoose": "^5.13.0",
         "morgan": "^1.10.0",
