--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "mongoose": "^5.13.0",
         "morgan": "^1.10.0",
         "multer": "^1.4.2",
+        "prismjs": "^1.24.1",
         "process": "^0.11.10",
         "uuid": "^8.3.2",
         "vue": "^2.6.14",
