--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
         "server": "node -r ts-node/register/transpile-only src/server/index.ts",
         "server:watch": "nodemon --config config/nodemon.config.json",
         "dev": "concurrently \"npm run server:watch\" \"npm run client\"",
-        "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js"
+        "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
+        "prod": "netlify-lambda build express",
+        "start": "npm run server"
     },
     "dependencies": {
         "axios": "^0.21.1",
@@ -66,12 +68,14 @@
         "html-loader": "^2.1.2",
         "html-webpack-plugin": "^5.3.1",
         "mini-css-extract-plugin": "^1.6.0",
+        "netlify-lambda": "^2.0.11",
         "nodemon": "^2.0.7",
         "postcss": "^8.3.0",
         "postcss-loader": "^5.3.0",
         "postcss-preset-env": "^6.7.0",
         "sass": "^1.34.1",
         "sass-loader": "^12.0.0",
+        "serverless-http": "^2.7.0",
         "ts-loader": "^9.2.3",
         "ts-node": "^10.0.0",
         "typescript": "^4.3.4",
@@ -79,6 +83,7 @@
         "vue-template-compiler": "^2.6.14",
         "webpack": "^5.38.1",
         "webpack-cli": "^4.7.2",
-        "webpack-dev-server": "^3.11.2"
+        "webpack-dev-server": "^3.11.2",
+        "webpack-merge": "^5.8.0"
     }
 }
