--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "start": "npm run server"
     },
     "dependencies": {
+        "@netlify/functions": "^0.7.2",
         "axios": "^0.21.1",
         "bcryptjs": "^2.4.3",
         "codemirror": "^5.62.0",
