--- a/package.json
+++ b/package.json
@@ -9,13 +9,11 @@
         "client": "cross-env NODE_ENV=development webpack serve --config config/webpack.dev.js",
         "server": "node -r ts-node/register/transpile-only src/server/index.ts",
         "server:watch": "nodemon --config config/nodemon.config.json",
-        "dev": "concurrently \"npm run server:watch\" \"npm run client\"",
+        "dev": "concurrently \"yarn server:watch\" \"yarn client\"",
         "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
-        "prod": "netlify-lambda build express",
-        "start": "npm run server"
+        "prod": "yarn build && yarn server"
     },
     "dependencies": {
-        "@netlify/functions": "^0.7.2",
         "axios": "^0.21.1",
         "bcryptjs": "^2.4.3",
         "codemirror": "^5.62.0",
