--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
         "server": "node -r ts-node/register/transpile-only src/server/index.ts",
         "server:watch": "nodemon --config config/nodemon.config.json",
         "dev": "concurrently \"yarn server:watch\" \"yarn client\"",
-        "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
-        "prod": "yarn build && yarn server"
+        "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js"
     },
     "dependencies": {
         "axios": "^0.21.1",
@@ -74,7 +73,6 @@
         "postcss-preset-env": "^6.7.0",
         "sass": "^1.34.1",
         "sass-loader": "^12.0.0",
-        "serverless-http": "^2.7.0",
         "ts-loader": "^9.2.3",
         "ts-node": "^10.0.0",
         "typescript": "^4.3.4",
