--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "server": "node -r ts-node/register/transpile-only src/server/index.ts",
         "server:watch": "nodemon --config config/nodemon.config.json",
         "start": "concurrently --raw \"yarn server:watch\" \"yarn client\"",
-        "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js"
+        "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
+        "lint": "eslint . --ext .ts,.js"
     },
     "dependencies": {
         "axios": "^0.21.1",
@@ -54,6 +55,8 @@
         "@types/multer": "^1.4.6",
         "@types/node": "^15.12.5",
         "@types/uuid": "^8.3.0",
+        "@typescript-eslint/eslint-plugin": "^5.8.0",
+        "@typescript-eslint/parser": "^5.8.0",
         "autoprefixer": "^10.2.6",
         "babel-loader": "^8.2.2",
         "babel-plugin-transform-regenerator": "^6.26.0",
@@ -64,6 +67,7 @@
         "cross-env": "^7.0.3",
         "css-loader": "^5.2.6",
         "css-minimizer-webpack-plugin": "^3.0.2",
+        "eslint": "^8.5.0",
         "html-loader": "^2.1.2",
         "html-webpack-plugin": "^5.3.1",
         "mini-css-extract-plugin": "^1.6.0",
