Refactor linting script

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "server:watch": "nodemon --config config/nodemon.config.json",
         "start": "concurrently --raw \"yarn server:watch\" \"yarn client\"",
         "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
-        "lint": "eslint . --ext .ts,.js"
+        "lint:scripts": "eslint \"src/**/*{ts,js}\""
     },
     "dependencies": {
         "axios": "^0.21.1",
