--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
         "server:watch": "nodemon --config config/nodemon.config.json",
         "start": "concurrently --raw \"yarn server:watch\" \"yarn client\"",
         "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
-        "lint:scripts": "eslint \"src/**/*{ts,js}\""
+        "lint:scripts": "eslint \"src/**/*{ts,js}\"",
+        "lint:styles": "stylelint \"src/**/*.{scss,css}\"",
+        "lint": "concurrently --raw \"yarn lint:scripts\" \"yarn lint:styles\""
     },
     "dependencies": {
         "axios": "^0.21.1",
@@ -76,8 +78,11 @@
         "postcss": "^8.3.0",
         "postcss-loader": "^5.3.0",
         "postcss-preset-env": "^6.7.0",
+        "postcss-scss": "^4.0.2",
         "sass": "^1.34.1",
         "sass-loader": "^12.0.0",
+        "stylelint": "^14.2.0",
+        "stylelint-config-standard-scss": "^3.0.0",
         "ts-loader": "^9.2.3",
         "typescript": "^4.3.4",
         "vue-loader": "^15.9.7",
