Unify all config files

--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,4 @@
 {
-    "plugins": ["transform-regenerator"]
+    "presets": ["@babel/preset-env"],
+    "plugins": ["transform-regenerator", "@babel/plugin-transform-runtime"]
 }
