--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
-    "tabWidth": 2,
+    "tabWidth": 4,
     "trailingComma": "es5",
     "printWidth": 200,
-    "bracketSpacing": true
+    "bracketSpacing": true,
+    "endOfLine": "lf"
 }
