--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
         "css-loader": "^5.2.6",
         "css-minimizer-webpack-plugin": "^3.0.2",
         "eslint": "^8.5.0",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-plugin-import": "^2.25.3",
         "html-loader": "^2.1.2",
         "html-webpack-plugin": "^5.3.1",
         "mini-css-extract-plugin": "^1.6.0",
@@ -82,7 +84,9 @@
         "sass": "^1.34.1",
         "sass-loader": "^12.0.0",
         "stylelint": "^14.2.0",
+        "stylelint-config-recommended": "^6.0.0",
         "stylelint-config-standard-scss": "^3.0.0",
+        "stylelint-order": "^5.0.0",
         "ts-loader": "^9.2.3",
         "typescript": "^4.3.4",
         "vue-loader": "^15.9.7",
