Remove airbnb config

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,5 +8,5 @@
     "ignorePatterns": ["config/*", "public/*"],
     "parser": "@typescript-eslint/parser",
     "plugins": ["@typescript-eslint"],
-    "extends": ["eslint:recommended", "plugin:@typescript-eslint/eslint-recommended", "plugin:@typescript-eslint/recommended", "airbnb-base"]
+    "extends": ["eslint:recommended", "plugin:@typescript-eslint/eslint-recommended", "plugin:@typescript-eslint/recommended", "prettier"]
 }
