--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,6 +1,6 @@
 {
     "plugins": ["stylelint-order"],
-    "extends": "stylelint-config-standard-scss",
+    "extends": ["stylelint-config-standard-scss", "stylelint-config-prettier"],
     "rules": {
         "indentation": 4,
         "max-empty-lines": 2,
