--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "vue-markdown": "^2.2.4",
         "vue-router": "^3.5.2",
         "vue-style-loader": "^4.1.3",
+        "vue-typed-mixins": "^0.2.0",
         "vuex": "^3.6.2"
     },
     "devDependencies": {
