--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "server": "nodemon --config config/nodemon.config.json",
         "start": "concurrently --raw \"yarn server\" \"yarn client\"",
         "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
-        "lint:scripts": "eslint \"src/**/*{ts,js}\"",
+        "lint:scripts": "eslint \"src/**/*{ts,js,vue}\"",
         "lint:styles": "stylelint \"src/**/*.{scss,css}\"",
         "lint": "concurrently --raw \"yarn lint:scripts\" \"yarn lint:styles\""
     },
@@ -59,6 +59,7 @@
         "@types/uuid": "^8.3.0",
         "@typescript-eslint/eslint-plugin": "^5.8.0",
         "@typescript-eslint/parser": "^5.8.0",
+        "@vue/eslint-plugin": "^4.2.0",
         "autoprefixer": "^10.2.6",
         "babel-loader": "^8.2.2",
         "babel-plugin-transform-regenerator": "^6.26.0",
@@ -71,6 +72,7 @@
         "css-minimizer-webpack-plugin": "^3.0.2",
         "eslint": "^8.5.0",
         "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-vue": "^8.3.0",
         "html-loader": "^2.1.2",
         "html-webpack-plugin": "^5.3.1",
         "mini-css-extract-plugin": "^1.6.0",
@@ -89,6 +91,7 @@
         "stylelint-order": "^5.0.0",
         "ts-loader": "^9.2.3",
         "typescript": "^4.3.4",
+        "vue-eslint-parser": "^8.2.0",
         "vue-loader": "^15.9.7",
         "vue-template-compiler": "^2.6.14",
         "webpack": "^5.38.1",
