--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
         "mini-css-extract-plugin": "^1.6.0",
         "netlify-lambda": "^2.0.11",
         "nodemon": "^2.0.7",
-        "postcss": "^8.3.0",
+        "postcss": "8.4.4",
         "postcss-loader": "^5.3.0",
         "postcss-preset-env": "^6.7.0",
         "postcss-scss": "^4.0.2",
