--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
         "mongoose": "^5.13.0",
         "multer": "^1.4.2",
         "process": "^0.11.10",
+        "quill": "^1.3.7",
         "ts-node": "^10.1.0",
         "uuid": "^8.3.2",
         "vue": "^2.6.14",
+        "vue-quill-editor": "^3.0.6",
         "vue-router": "^3.5.2",
         "vue-style-loader": "^4.1.3",
         "vue-typed-mixins": "^0.2.0",
@@ -53,6 +55,7 @@
         "@types/morgan": "^1.9.2",
         "@types/multer": "^1.4.6",
         "@types/node": "^15.12.5",
+        "@types/quill": "^2.0.9",
         "@types/uuid": "^8.3.0",
         "@typescript-eslint/eslint-plugin": "^5.8.0",
         "@typescript-eslint/parser": "^5.8.0",
