--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "express": "^4.17.1",
         "express-validator": "^6.12.0",
         "helmet": "^4.6.0",
+        "html-to-text": "^8.1.0",
         "jsonwebtoken": "^8.5.1",
         "lodash": "^4.17.21",
         "moment": "^2.29.1",
