--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "ts-node": "^10.1.0",
         "uuid": "^8.3.2",
         "vue": "^2.6.14",
+        "vue-fragment": "^1.5.2",
         "vue-quill-editor": "^3.0.6",
         "vue-router": "^3.5.2",
         "vue-style-loader": "^4.1.3",
