--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
         "sourceMap": true,
         "paths": {
             "@/*": ["./src/client/*"],
-            "@resources/*": ["./src/resources/*"]
+            "@components/*": ["./src/client/components/*"]
         }
     },
     "include": ["./src/**/*"],
