--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,13 +12,14 @@
         "target": "es5",
         "module": "commonjs",
         "lib": ["dom", "dom.iterable", "esnext"],
-        "jsx": "react",
         "allowSyntheticDefaultImports": true,
         "esModuleInterop": true,
         "sourceMap": true,
         "paths": {
             "@/*": ["./src/client/*"],
-            "@components/*": ["./src/client/components/*"]
+            "@components/*": ["./src/client/components/*"],
+            "@assets": ["./src/client/assets/*"],
+            "@server/*": ["./src/server/*"]
         }
     },
     "include": ["./src/**/*"],
