upgrade typescript and add new rules

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,19 +2,23 @@
     "compilerOptions": {
         "baseUrl": ".",
         "outDir": "./dist",
-        "strict": true,
-        "forceConsistentCasingInFileNames": true,
-        "moduleResolution": "node",
-        "resolveJsonModule": true,
-        "isolatedModules": true,
-        "noImplicitAny": true,
-        "allowJs": true,
         "target": "es5",
         "module": "commonjs",
+        "moduleResolution": "node",
         "lib": ["dom", "dom.iterable", "esnext"],
-        "allowSyntheticDefaultImports": true,
-        "esModuleInterop": true,
+        "strict": true,
+        "allowJs": true,
         "sourceMap": true,
+        "noImplicitAny": true,
+        "esModuleInterop": true,
+        "isolatedModules": true,
+        "allowUnusedLabels": false,
+        "resolveJsonModule": true,
+        "allowUnreachableCode": false,
+        "exactOptionalPropertyTypes": true,
+        "allowSyntheticDefaultImports": true,
+        "forceConsistentCasingInFileNames": true,
+        "noPropertyAccessFromIndexSignature": true,
         "paths": {
             "@/*": ["./src/client/*"],
             "@components/*": ["./src/client/components/*"],
