--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
         "paths": {
             "@/*": ["./src/client/*"],
             "@components/*": ["./src/client/components/*"],
-            "@assets": ["./src/client/assets/*"],
+            "@assets/*": ["./src/client/assets/*"],
             "@server/*": ["./src/server/*"]
         }
     },
