--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "express-validator": "^6.12.0",
         "helmet": "^4.6.0",
         "html-to-text": "^8.1.0",
+        "http-errors": "^2.0.0",
         "jsonwebtoken": "^8.5.1",
         "lodash": "^4.17.21",
         "moment": "^2.29.1",
@@ -53,6 +54,7 @@
         "@types/cors": "^2.8.10",
         "@types/express": "^4.17.12",
         "@types/helmet": "^4.0.0",
+        "@types/http-errors": "^1.8.2",
         "@types/jsonwebtoken": "^8.5.2",
         "@types/morgan": "^1.9.2",
         "@types/multer": "^1.4.6",
