--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "license": "MIT",
     "main": "./src/server/index.ts",
     "engines": {
-        "node": "14.x"
+        "node": ">=14"
     },
     "scripts": {
         "client": "cross-env NODE_ENV=development webpack serve --config config/webpack.dev.js",
