--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "license": "MIT",
     "main": "./src/server/index.ts",
     "engines": {
-        "node": ">=14"
+        "node": ">=14",
+        "npm": "6.14.9"
     },
     "scripts": {
         "client": "cross-env NODE_ENV=development webpack serve --config config/webpack.dev.js",
@@ -16,7 +17,7 @@
         "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
         "lint:scripts": "eslint \"src/**/*{ts,js,vue}\"",
         "lint:styles": "stylelint \"src/**/*.{scss,css}\"",
-        "lint": "concurrently --raw \"yarn lint:scripts\" \"yarn lint:styles\""
+        "lint": "concurrently --raw \"npm run lint:scripts\" \"npm run lint:styles\""
     },
     "dependencies": {
         "axios": "^0.21.1",
